WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25999
Chromium build bustage related to PassOwnPtr
https://bugs.webkit.org/show_bug.cgi?id=25999
Summary
Chromium build bustage related to PassOwnPtr
Darin Fisher (:fishd, Google)
Reported
2009-05-24 23:16:09 PDT
Chromium build bustage related to PassOwnPtr Changes:
http://trac.webkit.org/changeset/44098
http://trac.webkit.org/changeset/44099
Build bustage observed here:
http://build.chromium.org/buildbot/waterfall.fyi/builders/Webkit%20(webkit.org)/builds/4277/steps/compile/logs/stdio
Attachments
v1 patch
(1.16 KB, patch)
2009-05-24 23:22 PDT
,
Darin Fisher (:fishd, Google)
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2009-05-24 23:22:00 PDT
Created
attachment 30641
[details]
v1 patch
Mark Rowe (bdash)
Comment 2
2009-05-24 23:25:53 PDT
Comment on
attachment 30641
[details]
v1 patch Build fixes typically don't need review.
Darin Fisher (:fishd, Google)
Comment 3
2009-05-24 23:29:15 PDT
Landed as:
http://trac.webkit.org/changeset/44123
Maciej Stachowiak
Comment 4
2009-05-25 02:21:29 PDT
Although review is not mandatory for build fixes, there's nothing wrong with getting review, especially if there are people around to look at the fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug