2009-05-24  Darin Fisher  <darin@chromium.org>

Reviewed by Mark Rowe.

        Fix build bustage related to PassOwnPtr changes.

        https://bugs.webkit.org/show_bug.cgi?id=25999

        * platform/graphics/chromium/TransparencyWin.cpp:



Canonical link: https://commits.webkit.org/35992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44123 268f45cc-cd09-0410-ab3c-d52691b4dbfc